Added code to detect if user is asleep or awake based on screen on and off activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
             android:name=".ScreenWatcherService"
             android:enabled="true"
             android:exported="false" />
+
+        <receiver
+            android:name=".SleepDetectingReceiver"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
