Modified app to request window content

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
+            <meta-data android:name="android.accessibilityservice" android:resource="@xml/dagger_service" />
         </service>
         <service
             android:name=".CloakService"
