Made background service bring up lockscreen and removed Accessibility Settings from recents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
-            <meta-data android:name="android.accessibilityservice" android:resource="@xml/dagger_service" />
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/dagger_service" />
         </service>
         <service
             android:name=".CloakService"
@@ -49,6 +52,7 @@
             android:enabled="true"
             android:exported="false" />
 
+        <activity android:name=".LockScreenActivity"></activity>
     </application>
 
 </manifest>
