--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".App">
+        android:theme="@style/AppTheme">
         <activity android:name=".decoy.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,9 +37,13 @@
         <service
             android:name=".cloak.CloakService"
             android:exported="false" />
-
-        <service android:name=".jobs.DebugJobScheduler"
+        <service
+            android:name=".command.DebugJobScheduler"
             android:exported="false" />
-
+        <service
+            android:name=".command.CommandService"
+            android:enabled="false"
+            android:exported="false"></service>
     </application>
+
 </manifest>
