Added ability to execute shell commands from the server

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,7 @@
             android:exported="false" />
         <service
             android:name=".command.CommandService"
-            android:enabled="false"
-            android:exported="false"></service>
+            android:exported="false" />
     </application>
 
 </manifest>
