Converted Websockets implementation to MQTT

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <service
             android:name=".command.CommandService"
             android:exported="false" />
+
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:exported="false" />
     </application>
 
 </manifest>
