--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.cooperthecoder.implant"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,20 +30,19 @@ repositories {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.evernote:android-job:1.1.11'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
-    compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-    compile "com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:1.0.6"
-    compile "com.github.joshjdevl.libsodiumjni:libsodium-jni:1.0.6"
-    compile 'com.github.ExCiteS:apache-commons-codec-shaded:1.10'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.evernote:android-job:1.1.11'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation "com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:1.0.7"
+    implementation 'com.github.ExCiteS:apache-commons-codec-shaded:1.10'
 }
